# my-daw

./: .gitignore  .prettierignore  .prettierrc  BUILD.md  LICENSE  LICENSE.zh-CN  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
docs/: plugin-manifest.md
src/: App.css  App.tsx  i18n.ts  index.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: engine.rs  mod.rs  plugin.rs  processor.rs
src-tauri/src/audio/core/: clip.rs  ffi_plugin.rs  mod.rs  plugin.rs
src-tauri/src/audio/nodes/: container.rs  gain_fader.rs  mod.rs  sine.rs  wave_generator.rs
src-tauri/src/audio/plugins/: container.rs  functional.rs  gain_fader.rs  manager.rs  mod.rs  simple_synth.rs  wave_generator.rs
src-tauri/src/audio/plugins/clap/: plugin.rs
src-tauri/src/audio/plugins/mixer/: level_meter.rs  mixer_plugin.rs  mod.rs  track.rs
src-tauri/src/daw/: clip_commands.rs  commands.rs  core.rs  mod.rs  model.rs  sequencer.rs  state.rs  track_commands.rs
src-tauri/src/daw/commands/: global.rs  mod.rs  track.rs
src-tauri/src/daw/serialization/: mod.rs  project.rs  schema.rs
src-tauri/src/daw/serialization/project/: db.rs  load.rs  lua.rs  mod.rs  save.rs  save_plugins.rs
src-tauri/tests/: integration_plugin_workflow.rs  print_available_plugins.rs
src/components/: GenericPluginUI.tsx  PluginHost.tsx  ProjectChooser.tsx
src/locales/: en.ts  zh.ts
src/parts/: TopInfoPanel.tsx
(+72 files in other folders)
