[package]
name = "my-daw"
version = "0.0.2"
description = "A Tauri App"
authors = ["jujb233"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_daw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = { version = "0.16.0", features = ["oboe-shared-stdcxx"] }
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
uuid = { version = "1.18.1", features = ["v4"] }
libloading = "0.9.0"
clap-sys = "0.5.0"
mlua = { version = "0.11.5", features = ["luajit", "vendored", "serialize", "macros"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

